--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t mattmrs/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run attmrs/docker-react npm run test -- --coverage
+  - docker run mattmrs/docker-react npm run test -- --coverage
